--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang="en">
-{% load staticfiles %}
+    {% load staticfiles %}
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v4.1.1">
-    <title>Chuck Yim</title>
+    <title>Chuck Yim's blog</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/album/">
 
@@ -56,7 +57,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ml-auto">
-                    <a class="nav-link" href="{% url 'allblogs' %}">Blogs</a>
+                    <a class="nav-link active" href="{% url 'allblogs' %}">Blogs</a>
                     <a class="nav-link" href="{% static 'static_test.png' %}">Static_Test</a>
                     
                 </div>
@@ -65,35 +66,23 @@
     </header>
 
     <main role="main">
+        
+        <br/>
+        <br/>
+        <h2 class="text-center">Latest Posts</h2>
+        <hr/>
 
-        <section class="jumbotron text-center">
-            <div class="container">
-                <h1>Hi, I am Chuck.</h1>
-                <p class="lead text-muted">Welcom to my photography world!</p>
-                <p>
-                    <a href="mailto:cheukonyim@gmail.com" class="btn btn-primary my-2">Email me</a>
-                    <a href="#" class="btn btn-secondary my-2">Instagram</a>
-                </p>
-            </div>
-        </section>
+        <div class="container">
 
-        <div class="album py-5 bg-light">
-            <div class="container">
+            {% for blog in blogs.all %}
+            <a href="{% url 'detail' blog.id %}"><h3>{{ blog.title }}</h3></a>
+            {{ blog.pub_date_pretty }}
+            <br/>
+            <img class="img-fluid" src="{{ blog.image.url }}" ehight=200 width=200/>
+            <br/>
+            <p> {{ blog.summary }}</p>
+            {% endfor %}
 
-                {% for album in albums.all %}
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top" src="{{ album.image.url }}"/>
-                            <div class="card-body">
-                                <p class="card-text"> {{ album.summary }}</p>
-                            </div>
-                        </div>
-                    </div>        
-                </div>
-                {% endfor %}
-
-            </div>
         </div>
 
     </main>
