--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang="en">
-{% load staticfiles %}
+    {% load staticfiles %}
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v4.1.1">
-    <title>Chuck Yim</title>
+    <title>{{blog.title}}</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/album/">
 
@@ -66,34 +67,15 @@
 
     <main role="main">
 
-        <section class="jumbotron text-center">
-            <div class="container">
-                <h1>Hi, I am Chuck.</h1>
-                <p class="lead text-muted">Welcom to my photography world!</p>
-                <p>
-                    <a href="mailto:cheukonyim@gmail.com" class="btn btn-primary my-2">Email me</a>
-                    <a href="#" class="btn btn-secondary my-2">Instagram</a>
-                </p>
-            </div>
-        </section>
+        <div class="container">
 
-        <div class="album py-5 bg-light">
-            <div class="container">
+            <h1 class='text-center pt-3'>{{ blog.title }}</h1>
+            <p class='text-center'>{{ blog.pub_date }}</p>
+            <img class="img-fluid" src="{{ blog.image.url }}" />
+            <br/>
+            <p> {{ blog.body }}</p>
+        
 
-                {% for album in albums.all %}
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top" src="{{ album.image.url }}"/>
-                            <div class="card-body">
-                                <p class="card-text"> {{ album.summary }}</p>
-                            </div>
-                        </div>
-                    </div>        
-                </div>
-                {% endfor %}
-
-            </div>
         </div>
 
     </main>
