--- a/smallview/templates/smallview/home.html
+++ b/smallview/templates/smallview/home.html
@@ -87,6 +87,11 @@
                             <img class="card-img-top" src="{{ album.image.url }}"/>
                             <div class="card-body">
                                 <p class="card-text"> {{ album.summary }}</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <a href="{% url 'detail' album.blog_key %}">View</a>
+                                    </div>
+                                  </div>
                             </div>
                         </div>
                     </div>        
