fixed detail function argument to blog_key instead of .id

--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -75,7 +75,7 @@
         <div class="container">
 
             {% for blog in blogs.all %}
-            <a href="{% url 'detail' blog.id %}"><h3>{{ blog.title }}</h3></a>
+            <a href="{% url 'detail' blog.blog_key %}"><h3>{{ blog.title }}</h3></a>
             {{ blog.pub_date_pretty }}
             <br/>
             <img class="img-fluid" src="{{ blog.image.url }}" ehight=200 width=200/>
