--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-    {% load staticfiles %}
+{% load staticfiles %}
 
 <head>
     <meta charset="utf-8">
@@ -59,7 +59,7 @@
                 <div class="navbar-nav ml-auto">
                     <a class="nav-link" href="{% url 'allblogs' %}">Blogs</a>
                     <a class="nav-link" href="{% static 'static_test.png' %}">Static_Test</a>
-                    
+
                 </div>
             </div>
         </nav>
@@ -69,14 +69,44 @@
 
         <div class="container">
 
+            <!--Carousel Wrapper-->
+            <div id="carousel-example-1z" class="carousel slide carousel-fade" data-ride="carousel">
+                <!--Indicators-->
+                <ol class="carousel-indicators">
+                    {% for image in images %}
+                    <li data-target="#carousel-example-1z" data-slide-to="{{ forloop.counter0 }}"
+                        class="{% if forloop.counter0 == 0 %} active {% endif %}"></li>
+                    {% endfor %}
+                </ol>
+                <!--/.Indicators-->
+                <!--Slides-->
+                <div class="carousel-inner" role="listbox">
+                    {% for image in images %}
+                    <div class="carousel-item {% if forloop.counter0 == 0 %} active {% endif %}">
+                        <img class="d-block w-100" src="{{image.image.url}}" alt="First slide">
+                    </div>
+                    {% endfor %}
+                    <!--/First slide-->
+                    <!--/.Slides-->
+                    <!--Controls-->
+                    <a class="carousel-control-prev" href="#carousel-example-1z" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carousel-example-1z" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                    <!--/.Controls-->
+                </div>
+
+            </div>
+
             <h1 class='text-center pt-3'>{{ blog.title }}</h1>
             <p class='text-center'>{{ blog.pub_date }}</p>
             <img class="img-fluid" src="{{ blog.image.url }}" />
-            <br/>
+            <br />
             <p> {{ blog.body }}</p>
-        
-
-        </div>
 
     </main>
 
