--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -58,7 +58,6 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ml-auto">
                     <a class="nav-link active" href="{% url 'allblogs' %}">Blogs</a>
-                    <a class="nav-link" href="{% static 'static_test.png' %}">Static_Test</a>
                     
                 </div>
             </div>
@@ -68,22 +67,32 @@
     <main role="main">
         
         <br/>
-        <br/>
-        <h2 class="text-center">Latest Posts</h2>
-        <hr/>
+        <h2 class="text-center"></h2>
+        
+  
+            <div class="my-3 p-3 bg-white rounded shadow-sm">
+                <h5 class="pb-2 mb-0">Latest Posts</h5>
+                {% for blog in blogs.all %}
+                <hr/>
+                <div class="ml-1 row ">
+                    <div>
+                        <img class="img-fluid ml-2 mr-2" src="{{ blog.image.url }}" height=150 width=150/>
+                    </div>    
 
-        <div class="container">
+                    <div class="d-flex justify-content-center align-self-center">
+                        <div class="ml-5">
+                            <a href="{% url 'detail' blog.blog_key %}"><h6>{{ blog.title }}</h6></a>
+                            {{ blog.pub_date_pretty }}
+                        </div>
+                    </div>
 
-            {% for blog in blogs.all %}
-            <a href="{% url 'detail' blog.blog_key %}"><h3>{{ blog.title }}</h3></a>
-            {{ blog.pub_date_pretty }}
-            <br/>
-            <img class="img-fluid" src="{{ blog.image.url }}" ehight=200 width=200/>
-            <br/>
-            <p> {{ blog.summary }}</p>
-            {% endfor %}
+                </div>
 
-        </div>
+                {% endfor %}
+                
+              </div>
+
+        
 
     </main>
 
