--- a/smallview/templates/smallview/home.html
+++ b/smallview/templates/smallview/home.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 {% load staticfiles %}
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -57,8 +58,6 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ml-auto">
                     <a class="nav-link" href="{% url 'allblogs' %}">Blogs</a>
-                    <a class="nav-link" href="{% static 'static_test.png' %}">Static_Test</a>
-                    
                 </div>
             </div>
         </nav>
@@ -72,31 +71,98 @@
                 <p class="lead text-muted">Welcom to my photography world!</p>
                 <p>
                     <a href="mailto:cheukonyim@gmail.com" class="btn btn-primary my-2">Email me</a>
-                    <a href="#" class="btn btn-secondary my-2">Instagram</a>
+                    <a href="https://www.instagram.com/_chuckyim/?hl=en" class="btn btn-secondary my-2">Instagram</a>
                 </p>
             </div>
         </section>
 
         <div class="album py-5 bg-light">
             <div class="container">
-
-                {% for album in albums.all %}
+               
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card mb-4 box-shadow">
-                            <img class="card-img-top" src="{{ album.image.url }}"/>
+                            <img class="card-img-top" src="{{ first.image.url }}" height=150 width=150 />
                             <div class="card-body">
-                                <p class="card-text"> {{ album.summary }}</p>
+                                <p class="card-text"> {{ first.summary }}</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <a href="{% url 'detail' album.blog_key %}">View</a>
+                                        <a href="{% url 'detail' first.blog_key %}">View</a>
                                     </div>
-                                  </div>
+                                </div>
                             </div>
                         </div>
-                    </div>        
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card mb-4 box-shadow">
+                            <img class="card-img-top" src="{{ second.image.url }}" height=150 width=150 />
+                            <div class="card-body">
+                                <p class="card-text"> {{ second.summary }}</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <a href="{% url 'detail' second.blog_key %}">View</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card mb-4 box-shadow">
+                            <img class="card-img-top" src="{{ third.image.url }}" height=150 width=150 />
+                            <div class="card-body">
+                                <p class="card-text"> {{ third.summary }}</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <a href="{% url 'detail' third.blog_key %}">View</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card mb-4 box-shadow">
+                            <img class="card-img-top" src="{{ fourth.image.url }}" height=150 width=150 />
+                            <div class="card-body">
+                                <p class="card-text"> {{ fourth.summary }}</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <a href="{% url 'detail' fourth.blog_key %}">View</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>                   
+                    <div class="col-md-4">
+                        <div class="card mb-4 box-shadow">
+                            <img class="card-img-top" src="{{ fifth.image.url }}" height=150 width=150 />
+                            <div class="card-body">
+                                <p class="card-text"> {{ fifth.summary }}</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <a href="{% url 'detail' fifth.blog_key %}">View</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card mb-4 box-shadow">
+                            <img class="card-img-top" src="{{ sixth.image.url }}" height=150 width=150 />
+                            <div class="card-body">
+                                <p class="card-text"> {{ sixth.summary }}</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <a href="{% url 'detail' sixth.blog_key %}">View</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+              
                 </div>
-                {% endfor %}
+
+                
+
 
             </div>
         </div>
