--- a/smallview/templates/smallview/home.html
+++ b/smallview/templates/smallview/home.html
@@ -37,6 +37,12 @@
             user-select: none;
         }
 
+        .cover {
+            object-fit: cover;
+            width: 150px;
+            height: 150px;
+        }
+
         @media (min-width: 768px) {
             .bd-placeholder-img-lg {
                 font-size: 3.5rem;
@@ -82,7 +88,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card mb-4 box-shadow">
-                            <img class="card-img-top" src="{{ first.image.url }}" height=150 width=150 />
+                            <img class="card-img-top cover" src="{{ first.image.url }}" height=150 width=150 />
                             <div class="card-body">
                                 <p class="card-text"> {{ first.summary }}</p>
                                 <div class="d-flex justify-content-between align-items-center">
@@ -95,7 +101,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card mb-4 box-shadow">
-                            <img class="card-img-top" src="{{ second.image.url }}" height=150 width=150 />
+                            <img class="card-img-top cover" src="{{ second.image.url }}" height=150 width=150 />
                             <div class="card-body">
                                 <p class="card-text"> {{ second.summary }}</p>
                                 <div class="d-flex justify-content-between align-items-center">
@@ -108,7 +114,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card mb-4 box-shadow">
-                            <img class="card-img-top" src="{{ third.image.url }}" height=150 width=150 />
+                            <img class="card-img-top cover" src="{{ third.image.url }}" height=150 width=150 />
                             <div class="card-body">
                                 <p class="card-text"> {{ third.summary }}</p>
                                 <div class="d-flex justify-content-between align-items-center">
@@ -121,7 +127,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card mb-4 box-shadow">
-                            <img class="card-img-top" src="{{ fourth.image.url }}" height=150 width=150 />
+                            <img class="card-img-top cover" src="{{ fourth.image.url }}" height=150 width=150 />
                             <div class="card-body">
                                 <p class="card-text"> {{ fourth.summary }}</p>
                                 <div class="d-flex justify-content-between align-items-center">
@@ -134,7 +140,7 @@
                     </div>                   
                     <div class="col-md-4">
                         <div class="card mb-4 box-shadow">
-                            <img class="card-img-top" src="{{ fifth.image.url }}" height=150 width=150 />
+                            <img class="card-img-top cover" src="{{ fifth.image.url }}" height=150 width=150 />
                             <div class="card-body">
                                 <p class="card-text"> {{ fifth.summary }}</p>
                                 <div class="d-flex justify-content-between align-items-center">
@@ -147,7 +153,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card mb-4 box-shadow">
-                            <img class="card-img-top" src="{{ sixth.image.url }}" height=150 width=150 />
+                            <img class="card-img-top cover" src="{{ sixth.image.url }}" height=150 width=150 />
                             <div class="card-body">
                                 <p class="card-text"> {{ sixth.summary }}</p>
                                 <div class="d-flex justify-content-between align-items-center">
